# relatorio_anual_MB

./: .gitignore  README.md  extract_tables.py  imagem_planilha.py  preenche_relatorio.py  pyproject.toml  template_word.py
