[project]
name = "relatorio-anual-mb"
version = "0.1.0"
requires-python = ">=3.12"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "openpyxl",
    "python-docx",
    "pandas>=2.2.3",
    "xlrd>=2.0.1",
    "pdf2image>=1.17.0",
    "pywin32>=308",
    "dataframe-image>=0.2.7",
]
